--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 install:
-  - pip3 install -U pip setuptools
-  - pip3 install tox
+  - python3 -m pip install -U pip setuptools
+  - python3 -m pip install tox
 
 test_script:
   - tox
