--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,7 @@
 [tox]
-envlist = py{35,36},flake8,mypy,pydocstyle,docs
+envlist = py{35,36},doit
 
 [testenv]
-whitelist_externals =
-  make
 setenv =
   TOX = 1
 deps =
@@ -13,36 +11,17 @@ commands =
   py35: python -m unittest discover {toxinidir}/tests
   py36: coverage run -m unittest discover {toxinidir}/tests
   py36: coverage report
-  make -C {toxinidir} clean-build clean-pyc
 
-[testenv:flake8]
-deps = flake8
-skip_install = true
-commands =
-  flake8 appveyorpy setup.py tests
-
-[testenv:mypy]
-deps = mypy
-skip_install = true
-commands =
-  mypy appveyorpy
-
-[testenv:pydocstyle]
-deps = pydocstyle
-skip_install = true
-commands =
-  pydocstyle appveyorpy
-
-[testenv:docs]
-whitelist_externals =
-  make
+[testenv:doit]
 deps =
+  doit
+  flake8
+  mypy
+  pydocstyle
   -rrequirements-docs.txt
   readme_renderer
 commands =
-  python setup.py check -s -r
-  make docs
-  make clean-build clean-pyc
+  doit
 
 [testenv:codecov]
 passenv = CI TRAVIS TRAVIS_*
