--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps =
   py{35,36}: -r{toxinidir}/requirements-test.txt
   py36: coverage
 commands =
+  python -V
   py35: python -m unittest discover {toxinidir}/tests
   py36: coverage run -m unittest discover {toxinidir}/tests
   py36: coverage report
