--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ commands =
   py36: coverage report
 
 [testenv:doit]
+basepython = python3.6
 deps =
   doit
   flake8
@@ -22,6 +23,7 @@ deps =
   -rrequirements-docs.txt
   readme_renderer
 commands =
+  python -V
   doit
 
 [testenv:codecov]
