--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
 install:
-  - python3.6 -V
-  - python3.6 -m pip install -U pip setuptools
-  - python3.6 -m pip install tox
+  - C:\\Python36 -V
+  - C:\\Python36 -m pip install -U pip setuptools
+  - C:\\Python36 -m pip install tox
 
 test_script:
-  - python3.6 -m tox
+  - C:\\Python36 -m tox
 
 build: off
